# fettle

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: default.toml
docker/: docker-compose.yml
fettle/: Cargo.toml
fettle/src/: handlers.rs  main.rs
fettle/src/handlers/: backtest.rs  fetch_candles.rs  info.rs  source.rs
fettle/src/services/: tasks.rs
fettle/src/strategy/: manager.rs
fettle/src/tasks/: backtest.rs  fetch_candles.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: BacktestResult.tsx  CandlestickChart.tsx  ComboBox.tsx  FileTree.tsx  Navbar.tsx  StrategyEditor.tsx  chartDrawings.ts
frontend/src/hooks/: useBacktestStream.ts  useFetchCandlesStream.ts  useTaskStream.ts
frontend/src/lib/: appSettings.ts
frontend/src/pages/: Backtest.tsx  Live.tsx  MarketData.tsx  Optimization.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: Candle.ts  CreateFetchTaskRequest.ts  CreateTaskResponse.ts  ExchangeQuery.ts  GetCandlesQuery.ts  Task.ts  TaskConfig.ts  TaskEvent.ts  TaskStatus.ts  TaskType.ts  Timeframe.ts  index.ts
frontend/src/utils/: time.ts
merco/: Cargo.toml
merco/migrations/: 002_create_tasks_table.sql
merco/src/: app.rs  errors.rs  lib.rs  main.rs  models.rs  tasks.rs  utils.rs
src/: app.rs  errors.rs  handlers.rs  main.rs
src/exchange/: ccxt.rs
src/handlers/: info.rs  tasks.rs
src/tasks/: manager.rs
strategy-macro/src/: lib.rs
thoth/: Cargo.toml
thoth/src/: errors.rs  main.rs  services.rs  strategy.rs
(+44 files in other folders)
