[package]
name = "merco"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = "0.8"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
futures = "0.3"
pyo3 = { version = "0.27.1", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "bigdecimal", "chrono", "macros", "migrate", "postgres"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "11.1", features = ["chrono-impl", "serde-json-impl", "uuid-impl"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
